# road-connections

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.sh
data/saves/: 0.txt
include/: event_handler.hpp  game_controller.hpp  renderer.hpp  texture_manager.hpp
include/object/: camera.hpp  city.hpp  object.hpp  object_circle.hpp  object_list.hpp  road.hpp
include/utils/: game_info.hpp  game_parser.hpp  mathematics.hpp  static_list.hpp  texture.hpp
src/: event_handler.cpp  game_controller.cpp  main.cpp  renderer.cpp  texture_manager.cpp
src/object/: camera.cpp  city.cpp  road.cpp
src/utils/: game_parser.cpp  texture.cpp
